atualizando composer para teste

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "bleez/magento2-pt_br",
-    "description": "Magento2 pt_BR - Traduzido por Agência Bleez",
+    "name": "setor7soft/magento2-pt_br",
+    "description": "Magento2 pt_BR - Traduzido por Agência Bleez e setor7soft",
     "version": "0.0.3",
     "license": [
         "OSL-3.0",
